Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,157 +1,13 @@
-#!/bin/bash
-#
-# Run BlueSwan Test Suite and wait for result
+trigger:
+- master
 
-APIKEY=$BlueSwan_API_KEY
-SUITE_ID=$BlueSwan_SUITE_ID
-BROWSER=$BlueSwan_BROWSER
-USER_VARIABLES=$BlueSwan_VARIABLES
-TAG=$BlueSwan_BUILD_TAG
-BASE_URL=$BlueSwan_BASE_URL
-SEQUENTIAL_EXECUTION=$BlueSwan_SEQUENTIAL_EXECUTION
-API="https://blueswan.cigniti.com/api/v1"
-# API="http://localhost:55777/api/v1"
-# API="https://stage.BlueSwan.io/api/v1"
-MAX_POLL_DURATION=1200
-POLL_INTERVAL=10
+pool:
+  vmImage: 'ubuntu-latest'
 
-run_id=""
-
-function show_help {
-    echo -e "Usage: Declare required environment variables in .travis.yml and then run bash \\n$0 . For more information check documentation at http://doc.blueswan.io.s3-website-us-east-1.amazonaws.com/TravisCI.html"
-}
-
-
-function get_variables {
-    variables_json_str=""
-    if [ -n "$USER_VARIABLES" ]
-    then
-        variables_json=()
-        IFS=',' read -ra variables <<< "$USER_VARIABLES"
-        for i in "${variables[@]}"
-        do
-            IFS='=' read -ra variable <<< "$i"
-            variable_json='"'"${variable[0]}"'":"'"${variable[1]}"'"'
-            variables_json+=("$variable_json")
-        done
-        variables_json_str='{ '"$(IFS=,; echo "${variables_json[*]}")"' }'
-    fi
-    echo "$variables_json_str"
-}
-
-parsed_variables=$(get_variables)
-
-function invoke_suite {
-  dataJson='
-  {
-      "Browser": "'"$BROWSER"'", 
-      "Variables": '"${parsed_variables:-null}"',
-      "Tag": "'"$TAG"'",
-      "BaseUrl": "'"$BASE_URL"'",
-	  "RunSequentially": '"$SEQUENTIAL_EXECUTION"'
-  }'
-
-  http_response=$(curl --silent --write-out "HTTPSTATUS:%{http_code}" -X POST \
-  --url "$API/suites/$SUITE_ID/runs" \
-  --header "authorization: ApiKey $APIKEY" \
-  --header 'content-type: application/json' \
-  --data "$dataJson")
-}
-
-function get_status {
-    run_status=$(curl --silent --write-out "HTTPSTATUS:%{http_code}" \
-    --url "$API/suites/$SUITE_ID/runs/$run_id" \
-    --header "authorization: ApiKey $APIKEY")
-}
-
-if [ ! "$APIKEY" ]
-then
-    echo "API key is not provided. Please set environment variable BlueSwan_API_KEY" >&2
-    show_help
-    exit 1
-fi
-
-if [ ! "$SUITE_ID" ]
-then
-    echo "Suite Id is not provided. Please set environment variable BlueSwan_SUITE_ID" >&2
-    show_help
-    exit 1
-fi
-
-if [ ! "$BROWSER" ]
-then
-    echo "Browser not specified. Defaulting to Chrome."
-    BROWSER="Chrome"
-else
-    echo "Browser $BROWSER"
-fi
-
-if [ "$BASE_URL" ]
-then
-    echo "Base URL: $BASE_URL"
-else
-    echo "Base URL: Default"
-fi
-
-if [ "${SEQUENTIAL_EXECUTION,,}" == "false" ]
-then
-    echo "PARALLEL EXECUTION"
-	SEQUENTIAL_EXECUTION="false"
-else
-	SEQUENTIAL_EXECUTION="true"
-fi
-
-invoke_suite
-
-http_body=$(echo $http_response | sed -e 's/HTTPSTATUS\:.*//g')
-
-http_status=$(echo $http_response | tr -d '\n' | sed -e 's/.*HTTPSTATUS://')
-
-SUCCESS="$(echo "$http_response" | grep 202)"
-
-if [ "$http_status" != "202" ]
-then
-    echo "Execution failed:" >&2
-    echo "The server did not accept the request and returned status: "
-    echo "$http_response" >&2
-    echo "" >&2
-    exit 1
-fi
-
-run_id=$(echo "$http_body" | python -c 'import json,sys;obj=json.load(sys.stdin);print obj["runId"]')
-
-echo "Test suite triggered. Received run Id: $run_id"
-echo "Checking status of current run every $POLL_INTERVAL seconds"
-
-elapsed=0
-while true
-do
-    if [ $elapsed -gt $MAX_POLL_DURATION ]
-    then
-        echo "Timed out waiting for the result." >&2
-        exit 1
-    fi
-    get_status
-
-    if [ -n "$(echo "$run_status" | grep "Passed")" ]
-    then
-     echo "Test suite status: Passed."
-        exit 0
-    fi
-
-    if [ -n "$(echo "$run_status" | grep "Failed")" ]
-    then
-        echo "Test suite status: Failed." >&2
-        exit 1
-    fi
-
-    if [ -n "$(echo "$run_status" | grep "Running")" ]
-    then
-        echo "Test suite status: Running"
-        sleep $POLL_INTERVAL
-        elapsed=$((elapsed + POLL_INTERVAL))
-    else
-        echo "Unknown status received. Received response: $run_status. Aborting. " >&2
-        exit 1
-    fi
-done
+steps:
+- bash: curl -s  http://doc.blueswan.io.s3-website-us-east-1.amazonaws.com/files/BlueSwan-travisci.sh | bash /dev/stdin
+  displayName: "Invoke BlueSwan Test Suite"
+  name: "BlueSwanTrigger"
+  failOnStderr: "true"
+  timeoutInMinutes: 60
+  env: {"BlueSwan_API_KEY":"DJiKvMPbfAGVbLh/2BoBMkDjD2TxKSZTczpVPQ7T8R0=","BlueSwan_SUITE_ID":"19","BlueSwan_BROWSER":"Chrome","BlueSwan_VARIABLES":"name1=javas,input=admin","BlueSwan_BUILD_TAG":"Sequential0","BlueSwan_BASE_URL":"http://the-internet.herokuapp.com/","BlueSwan_SEQUENTIAL_EXECUTION":"FALSE"}
