--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,4 +10,4 @@ steps:
   name: "BlueSwanTrigger"
   failOnStderr: "true"
   timeoutInMinutes: 60
-  env: {"BlueSwan_API_KEY":"DJiKvMPbfAGVbLh/2BoBMkDjD2TxKSZTczpVPQ7T8R0=","BlueSwan_SUITE_ID":"19","BlueSwan_BROWSER":"Chrome","BlueSwan_VARIABLES":"name1=javas,input=admin","BlueSwan_BUILD_TAG":"Sequential0","BlueSwan_BASE_URL":"http://the-internet.herokuapp.com/","BlueSwan_SEQUENTIAL_EXECUTION":"FALSE"}
+  env: {"BlueSwan_API_KEY":"DJiKvMPbfAGVbLh/2BoBMkDjD2TxKSZTczpVPQ7T8R0=","BlueSwan_SUITE_ID":"19","BlueSwan_BROWSER":"Chrome","BlueSwan_VARIABLES":"name1=javas,input=admin","BlueSwan_BUILD_TAG":"Sequential0","BlueSwan_BASE_URL":"http://the-internet.herokuapp.com/"}
