--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,4 +10,5 @@ steps:
   name: "BlueSwanTrigger"
   failOnStderr: "true"
   timeoutInMinutes: 60
-  env: {"BlueSwan_API_KEY":"DJiKvMPbfAGVbLh/2BoBMkDjD2TxKSZTczpVPQ7T8R0=","BlueSwan_SUITE_ID":"19","BlueSwan_BROWSER":"Chrome","BlueSwan_VARIABLES":"name1=javas,input=admin","BlueSwan_BUILD_TAG":"Sequential0","BlueSwan_BASE_URL":"http://the-internet.herokuapp.com/"}
+  env: {"BlueSwan_API_KEY":"lK1r+/yTueZ6CIIjgjLJRqH2xFbnMinLBOoYZeEaqdg=","BlueSwan_SUITE_ID":"12","BlueSwan_BROWSER":"Chrome","BlueSwan_VARIABLES":"name1=javas,input=admin","BlueSwan_BUILD_TAG":"test","BlueSwan_BASE_URL":"https://www.phptravels.net/"}
+  #env: {"BlueSwan_API_KEY":"DJiKvMPbfAGVbLh/2BoBMkDjD2TxKSZTczpVPQ7T8R0=","BlueSwan_SUITE_ID":"19","BlueSwan_BROWSER":"Chrome","BlueSwan_VARIABLES":"name1=javas,input=admin","BlueSwan_BUILD_TAG":"Sequential0","BlueSwan_BASE_URL":"http://the-internet.herokuapp.com/"}
